# fastapi_kafka_chat

./: .env.example  .gitignore  pyproject.toml
app/application/api/: main.py
app/application/api/messages/: handlers.py  schemas.py
app/domain/entities/: base.py  messages.py
app/domain/events/: base.py  message.py
app/domain/exceptions/: base.py  messages.py
app/domain/values/: base.py  messages.py
app/infra/repositories/: messages.py
app/infra/repositories/messages/: base.py  coverters.py  memory.py  mongo.py
app/logic/: __init__.py  mediator.py
app/logic/commands/: base.py  messages.py
app/logic/events/: base.py
app/logic/exceptions/: base.py  mediator.py  messages.py
app/logic/queries/: __init__.py  base.py  messages.py
app/tests/: conftest.py  fixtures.py
app/tests/aplication/api/: conftest.py  test_messages.py
app/tests/domain/values/: test_messages.py
app/tests/logic/: test_messages.py
docker_compose/: app.yaml
