[project]
name = "fast-api-chat"
version = "0.1.0"
description = ""
authors = [
    {name = "damotsov",email = "george.damotsov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "motor (>=3.7.0,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "uvicorn[all] (>=0.34.1,<0.35.0)",
    "ipython (>=9.1.0,<10.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
