[project]
name = "fast-api-chat"
version = "0.1.0"
description = ""
authors = [
    {name = "damotsov",email = "george.damotsov@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "faker (>=37.1.0,<38.0.0)",
    "uvicorn[all] (>=0.34.2,<0.35.0)",
    "punq (>=0.7.0,<0.8.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "motor (>=3.7.0,<4.0.0)",
    "ipython (>=9.2.0,<10.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
